Slightly improved YM262 sound for Sir Lancelot
Fixed sound problems if a OKI6295 game is used after a OKI6376 game (e.g. GTS3 after Sleic)
Fixed VGM recording for machines using OKI6295 sound
Added VGM recording for machines using BSMT2000 sound (WIP, as support is also WIP in libvgm,MAME-vgmplay,etc)

*** ROM SUPPORT *** Thanks to Tom Collins, Paul Swan, Dieter Werner, Victor Fernandez, Jordi Beltran, ipdb.org, Billc479, Scott Charles, inkochnito, frisbez, Chad Hendrickson
Correct Dumps:
DE: Batman 1.06 (just using correct name for the display rom (1.02 instead of 1.06))
Gottlieb: renamed Monte Carlo (German) to German rev.1
          renamed Monte Carlo (German Free Play) to German rev.1 Free Play
          renamed Monte Carlo (German Millions option, Free Play) to German rev.1 Millions option, Free Play

Kinda new:
Teenage Mutant Ninja Turtles 2.00 (unofficial MOD)

Clones:
Adventures of Rocky and Bullwinkle and Friends 1.03 (Italian), 1.10 (Belgian) (note that both dumps are incomplete, the italian set may be correct though, but the belgian one misses the display, so does not feature belgian text)
Bad Cats LF-1 (French)
Bad Cats (The Cat's Meow) (MOD 1.2 & 1.3)
Cue Ball Wizard (Spanish / Vifico license)
Gorgar L-2 (most likely official, but unreleased so far, makes it the newest version available)
High Speed (G-4 aka German PROTO4)
Maverick 4.04 (German, Display 4.00)
Monte Carlo (German) (most likely older revision than existing one, see above)
Rollergames TA-2 (LA-2C competition MOD based Tournament Edition)
Rolling Stones V21 (unreleased so far, makes it the newest version available)
Soccer Kings (alternate set 2)
Super Mario Bros. (Spanish / Vifico license) (rev.1 and (most likely) rev.2)
Surf 'n Safari (Tournament MOD)
Transporter the Rescue L-3 (Fixed Jackpot MOD), LX-4 (Competition MOD in 2 variants: 'adult' and clean (one replaced word))
Victory (tournament/competition MOD 1.1 & 1.2 & 1.3)


