@@ -1,7 +1,7 @@
 /**********************************************************************************************
  *
  *   Data East BSMT2000 driver
- *   by Aaron Giles
+ *   by Aaron Giles, Steve Ellenoff, Martin Adrian & Carsten Waechter
  *
  **********************************************************************************************/
 
@@ -17,9 +17,9 @@ struct BSMT2000interface
         int region[MAX_BSMT2000];               /* memory region where the sample ROM lives */
         int mixing_level[MAX_BSMT2000];         /* master volume */
 #ifdef PINMAME
-        int use_de_rom_banking;                 /* Special flag to use Data East rom bank handling */
-        int shift_data;                         /* Shift integer to apply to samples for changing volume - this is most likely done external to the bsmt chip in the real hardware */
-        int reverse_stereo;                     /* Special flag to determine if left and right channels should be reversed */
+        int use_de_rom_banking;                 /* special flag to use Data East rom bank handling */
+        int shift_data;                         /* not wired up anymore/unused!!  shift integer to apply to samples for changing volume - this is most likely done external to the bsmt chip in the real hardware */
+        int reverse_stereo;                     /* special flag to determine if left and right channels should be reversed, seems like this is not needed anymore, as Mystery Castle, Pistol Poker and Al's Garage Band do not need it anymore (see sound test: left/right speaker test) */
 #endif
 };
 
